Fix layout bugs

--- a/assets/styles/site.scss
+++ b/assets/styles/site.scss
@@ -3,16 +3,17 @@
 
 $primary: #36c0cd;
 
-.container {
-  padding-left: 1rem;
-  padding-right: 1rem;
+.description {
+  padding: 1.4em;
+  margin: 0 auto;
+  max-width: 600px;
 }
 
 .calendar-container {
   min-height: 276px;
   text-align: center;
   margin-top: 30px;
-  margin-bottom: 30px;
+  margin-bottom: 1em;
 }
 
 .brand {
